<resources>
    <string name="app_name">Wasla FCIS</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="subject1">Operating System</string>
    <string name="subject2">Computer Graphics</string>
    <string name="subject3">Computer Architecture</string>
    <string name="subject4">Artificial Intelligence</string>
    <string name="subject5">System Analysis</string>
    <string name="subject6">DataBase</string>
    <string name="email">mahmoud.salah@cis.asu.edu.eg</string>
</resources>
